<resources>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="app_name">BookXchange</string>
    <string name="google_maps_api_key">AIzaSyAD7EJ9PRdNMwEo0Cpa9VbOeQq_LDqEfRo</string>
    <string name="google_geo_code_api_key">AIzaSyAXe8NalmwBC-hs8lsr_FfJfMZSb_E6vFc</string>
    <string name="insert_isbn">Please, enter ISBN number</string>
    <string name="add_book">Add book</string>
    <string name="title">Book Title</string>
    <string name="author">Author</string>
    <string name="publisher">Publisher</string>
    <string name="edition">Edition</string>
    <string name="editorial_review">Editorial review </string>
    <string name="ISBN">ISBN</string>
    <string name="book_title">Book title</string>
    <string name="book_author">Book Author</string>
    <string name="book_description">Description</string>
    <string name="isbn_number">ISBN Number</string>
    <string name="add_photo">Add Photo</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last Name</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="bookxchange">BookXChange</string>
    <string name="auth_failed">Authentication failed: %1$s.</string>
    <string name="map_null_error">Error - Map was null!!</string>
    <string name="current_location_null">Current location was null, enable GPS</string>
    <string name="message">Message</string>
    <string name="number">%1$d</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="send">Send</string>
    <string name="cancel">Cancel</string>
    <string name="share">Share</string>
    <string name="rate_app">Rate App</string>
    <string name="logout">Logout</string>
    <string name="profile">Profile</string>
    <string name="action_settings">Settings</string>
    <string name="welcome">Welcome</string>
    <string name="add_review">Add Review</string>
    <string name="example_review">Excelent! Just on time to share our books!</string>
    <string name="hint_review">Write your review</string>
    <string name="search_text">Search</string>
    <string name="example_message">Hi! how are you?</string>
    <string name="messages">Direct Messages</string>
    <string name="book_publisher">Publisher</string>
    <string name="zip">Zip</string>
    <string name="book_not_found">Book not found for ISBN</string>
    <string name="error_login">Please, enter your email</string>
    <string name="enter_isbn">Enter ISBN</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="pref_default_display_zip">94306</string>
    <string name="pref_title_display_zip">Zip Code</string>

</resources>
