<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_share"
        android:icon="@drawable/ic_menu_share"
        android:title="@string/share" />
    <item
        android:id="@+id/nav_rate"
        android:icon="@drawable/ic_star_rate_24dp"
        android:title="@string/rate_app" />
    <item
        android:id="@+id/nav_login"
        android:icon="@drawable/ic_vpn_key_24dp"
        android:title="@string/login" />
    <item
        android:id="@+id/nav_logout"
        android:icon="@drawable/ic_exit_to_app_24dp"
        android:title="@string/logout" />
    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_person_24dp"
        android:title="@string/profile" />
    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_settings_applications_24dp"
        android:title="@string/action_settings" />
</menu>