<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.fantastic.bookxchange.activities.BookDetailActivity">

    <ImageView
        android:id="@+id/ivLargeImage"
        android:layout_width="@android:dimen/notification_large_icon_height"
        android:layout_height="100dp"
        android:layout_marginLeft="25dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        app:srcCompat="@drawable/common_ic_googleplayservices"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="22dp"
        android:layout_marginStart="22dp"
        android:text="@string/title"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:layout_alignTop="@+id/ivLargeImage"
        android:layout_toRightOf="@+id/ivLargeImage"
        android:layout_toEndOf="@+id/ivLargeImage" />

    <TextView
        android:id="@+id/tvAuthor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvTitle"
        android:layout_alignStart="@+id/tvTitle"
        android:layout_below="@+id/tvTitle"
        android:text="@string/author"
        android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Subtitle" />

    <TextView
        android:id="@+id/tvDetailPage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detail_page"
        android:layout_below="@+id/tvAuthor"
        android:layout_alignLeft="@+id/tvAuthor"
        android:layout_alignStart="@+id/tvAuthor" />

    <TextView
        android:id="@+id/tvEdition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edition"
        android:layout_alignLeft="@+id/tvEditorialReview"
        android:layout_alignStart="@+id/tvEditorialReview"
        android:layout_toLeftOf="@+id/tvTitle"
        android:layout_toStartOf="@+id/tvTitle" />

    <TextView
        android:id="@+id/tvEditorialReview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/editorial_review"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
