<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.fantastic.bookxchange.activities.BookDetailActivity">

    <include
        layout="@layout/toolbar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"/>



    <ImageView
        android:id="@+id/ivLargeImage"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_alignBottom="@+id/tvPublisher"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_margin="@dimen/activity_horizontal_margin"
        app:srcCompat="@drawable/isbn_position" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ivLargeImage"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:text="@string/title"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:layout_alignRight="@+id/tvAuthor"
        android:layout_alignEnd="@+id/tvAuthor" />

    <TextView
        android:id="@+id/tvAuthor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tvPublisher"
        android:layout_alignEnd="@+id/tvPublisher"
        android:layout_alignRight="@+id/tvPublisher"
        android:layout_marginBottom="17dp"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:text="@string/author"
        android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Subtitle" />

    <TextView
        android:id="@+id/tvPublisher"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tvEditorialReview"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="35dp"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:text="@string/publisher" />

    <TextView
        android:id="@+id/tvEditorialReview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="56dp"
        android:text="@string/editorial_review" />

</LinearLayout>

