<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.fantastic.bookxchange.activities.RegistrationActivity">

    <RelativeLayout
        android:id="@+id/spacer_top"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@color/colorPrimary"
        android:orientation="vertical">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:layout_marginTop="10dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/logo" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/spacer_bottom"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/spacer_top"
        android:background="@android:color/white"
        android:orientation="vertical">


    </RelativeLayout>

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/tvOr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/container"
        android:layout_marginTop="8dp"
        style="?textRegular"
        android:text="Already have Account ? Goto"
        android:textAlignment="center" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btnGoToLogin"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_below="@+id/tvOr"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="32dp"
        android:layout_centerInParent="true"
        android:layout_marginRight="32dp"
        android:layout_marginTop="8dp"
        style="?button"
        android:onClick="gotoLogin"
        android:text="@string/login"
        />


    <android.support.v7.widget.CardView
        android:id="@+id/container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginStart="32dp"
        app:cardCornerRadius="5dp"
        app:cardElevation="5dp">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/container_first"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvSignupTitle">

                <EditText
                    android:id="@+id/etFirstName"
                    style="?textRegular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/first_name"
                    android:inputType="textPersonName" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/container_last"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/container_first">

                <EditText
                    android:id="@+id/etLastName"
                    style="?textRegular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/last_name"
                    android:inputType="textPersonName" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/container_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/container_last">

                <EditText
                    android:id="@+id/etEmail"
                    style="?textRegular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/container_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/container_email">

                <EditText
                    android:id="@+id/etPassword"
                    style="?textRegular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/zip_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/container_password">

                <EditText
                    android:id="@+id/etZip"
                    style="?textRegular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/zip"
                    android:inputType="textPostalAddress" />
            </android.support.design.widget.TextInputLayout>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btnRegister"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_below="@+id/zip_container"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="16dp"
                style="?button"
                android:onClick="register"
                android:text="@string/register"
                />

        </RelativeLayout>

    </android.support.v7.widget.CardView>

</RelativeLayout>
