<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.fantastic.bookxchange.fragments.MessageFragment">

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/tvSignupTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/message"
        android:textColor="@color/colorAccent"
        android:textSize="20sp"
        android:textStyle="bold" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/container_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvSignupTitle"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp">

        <EditText
            android:id="@+id/etMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/message"
            android:inputType="text" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/container_chars"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/container_message"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_margin="8dp"
            android:layout_gravity="right"
            android:id="@+id/tvCharactersRemaining"
            android:text="34 / 50"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btnGoToSendMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/send"
        android:textColor="@android:color/white"
        android:layout_marginLeft="58dp"
        android:layout_marginStart="58dp"
        android:layout_below="@id/container_message"
        android:layout_alignBaseline="@+id/btnCancel"
        android:layout_alignBottom="@+id/btnCancel"
        android:layout_toRightOf="@+id/btnCancel"
        android:layout_toEndOf="@+id/btnCancel" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btnCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/cancel"
        android:textColor="@android:color/white"
        android:layout_marginLeft="61dp"
        android:layout_marginStart="61dp"
        android:layout_below="@+id/container_message"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


    />



</RelativeLayout>